feat!: change from byte[] to url (string) saveing